Fixed the mobile layout, looks a lot better. This push changes the color of the arrows for better visibility.

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ body {
 }
 
 .lightbox-content-details a {
-    color: blue;
+    color: white;
     text-decoration: underline;
 }
 
